Java 17, dependency updates